# brain-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: example-note.md
src/brain/: cli.py
tests/: test_cli.py
