[project]
name = "brain-cli"
version = "0.1.0"
description = "A tiny command line tool for organizing thoughts in Markdown."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich"
]

[project.scripts]
brain = "brain.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
